--- a/codingce-gulimall/gulimall-product/pom.xml
+++ b/codingce-gulimall/gulimall-product/pom.xml
@@ -19,6 +19,7 @@
     </properties>
     <dependencies>
 
+        <!-- 公众项目 -->
         <dependency>
             <groupId>cn.com.codingce</groupId>
             <artifactId>gulimall-common</artifactId>
@@ -45,11 +46,7 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -70,18 +67,7 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
+
         </plugins>
     </build>
     <repositories>
